# vibrofinance

./: .replit  CNAME  main.py  pyproject.toml
.streamlit/: config.toml  pages.toml
data/: courses.json  users.json
db/: chats.json  users.json
pages/: auth.py
pages_hidden/: auth.py
styles/: custom.css
utils/: ai_advisor.py  auth.py  chart_helper.py  database.py  education_manager.py  goal_planner.py  ml_predictor.py  portfolio_manager.py  stock_data.py
