[project]
name = "repl-nix-financeintelligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "google-generativeai>=0.8.3",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "yfinance>=0.2.51",
]
