[project]
name = "repl-nix-financeintelligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.3",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
    "yfinance>=0.2.51",
]
